--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.1",
     "react-use-cookie": "^1.4.0",
     "slick-carousel": "^1.8.1",
     "universal-cookie": "^4.0.4",
