--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "evergreen-ui": "^6.10.3",
     "jquery": "^3.6.1",
     "js-cookie": "^3.0.1",
+    "nodemailer": "^6.7.8",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.5.0",
